src/objects/FieloPRP__InvoiceItem__c.object
<CustomObject>
    <fields>
        <fullName>FieloPRP__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPRP__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>FieloPRP__Invoice__c</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>InvoiceItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPRP__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>InvoiceItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPRP__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPRP__TotalPrice__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloPRP__UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <formula>FieloPRP__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <label>Invoice Item</label>
    <nameField>
        <displayFormat>IT-{00000000}</displayFormat>
        <label>Invoice Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloPRP__ValidateInvoiceNull</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( FieloPRP__Invoice__c )</errorConditionFormula>
        <errorMessage>Invoice is a required field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloPRP__ValidateInvoiceStatus</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(FieloPRP__Invoice__r.FieloPRP__Status__c ,&apos;Open&apos;) || ISPICKVAL(FieloPRP__Invoice__r.FieloPRP__Status__c ,&apos;New&apos;))</errorConditionFormula>
        <errorMessage>An invoice can only be modified in status &quot;Open&quot; or &quot;New&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloPRP__ValidateInvoiceUpdate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISCHANGED( FieloPRP__Invoice__c ),
 NOT(ISBLANK(PRIORVALUE(FieloPRP__Invoice__c))),
 PRIORVALUE(FieloPRP__Invoice__c)!=FieloPRP__Invoice__c
)</errorConditionFormula>
        <errorMessage>Can not update the Invoice field.</errorMessage>
    </validationRules>
</CustomObject>